--- a/src/MonoTorrent.Dht/MonoTorrent.Dht.csproj
+++ b/src/MonoTorrent.Dht/MonoTorrent.Dht.csproj
@@ -1,21 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.21022</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{7A2A7E73-FD43-4171-AA34-DA413D35459E}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MonoTorrent.Dht</RootNamespace>
-    <AssemblyName>MonoTorrent.Dht</AssemblyName>
-    <FileUpgradeFlags>
-    </FileUpgradeFlags>
+    <FileUpgradeFlags />
     <OldToolsVersion>3.5</OldToolsVersion>
-    <UpgradeBackupLocation>
-    </UpgradeBackupLocation>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <UpgradeBackupLocation />
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -31,102 +20,24 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <AssemblyTitle>MonoTorrent DHT</AssemblyTitle>
+    <Product>MonoTorrent DHT</Product>
+    <Description>MonoTorrent DHT</Description>
+    <Copyright>Alan McGovern, Olivier Dufour 2009</Copyright>
+    <Version>0.70</Version>
+    <AssemblyVersion>0.70</AssemblyVersion>
+    <FileVersion>0.70</FileVersion>
+    <OutputPath>..\..\build\MonoTorrent\$(Configuration)\</OutputPath>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>..\..\build\MonoTorrent\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>..\..\build\MonoTorrent\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
     <DebugSymbols>true</DebugSymbols>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AssemblyInfo.cs" />
-    <Compile Include="BigInteger.cs" />
-    <Compile Include="DhtEngine.cs" />
-    <Compile Include="EventArgs\NodeAddedEventArgs.cs" />
-    <Compile Include="EventArgs\SendMessageEventArgs.cs" />
-    <Compile Include="EventArgs\TaskCompleteEventArgs.cs" />
-    <Compile Include="Listeners\DhtListener.cs" />
-    <Compile Include="Message.cs" />
-    <Compile Include="MessageException.cs" />
-    <Compile Include="MessageFactory.cs" />
-    <Compile Include="MessageLoop.cs" />
-    <Compile Include="Messages\Errors\ErrorMessage.cs" />
-    <Compile Include="Messages\Queries\AnnouncePeer.cs" />
-    <Compile Include="Messages\Queries\FindNode.cs" />
-    <Compile Include="Messages\Queries\GetPeers.cs" />
-    <Compile Include="Messages\Queries\Ping.cs" />
-    <Compile Include="Messages\Queries\QueryMessage.cs" />
-    <Compile Include="Messages\Responses\AnnouncePeerResponse.cs" />
-    <Compile Include="Messages\Responses\FindNodeResponse.cs" />
-    <Compile Include="Messages\Responses\GetPeersResponse.cs" />
-    <Compile Include="Messages\Responses\PingResponse.cs" />
-    <Compile Include="Messages\Responses\ResponseMessage.cs" />
-    <Compile Include="Nodes\NodeId.cs" />
-    <Compile Include="RoutingTable\Bucket.cs" />
-    <Compile Include="Nodes\NodeState.cs" />
-    <Compile Include="Nodes\Node.cs" />
-    <Compile Include="RoutingTable\RoutingTable.cs" />
-    <Compile Include="Tasks\AnnounceTask.cs" />
-    <Compile Include="Tasks\GetPeersTask.cs" />
-    <Compile Include="Tasks\InitialiseTask.cs" />
-    <Compile Include="Tasks\ITask.cs" />
-    <Compile Include="Tasks\RefreshBucketTask.cs" />
-    <Compile Include="Tasks\ReplaceNodeTask.cs" />
-    <Compile Include="Tasks\SendMessageTask.cs" />
-    <Compile Include="Tasks\Task.cs" />
-    <Compile Include="TransactionId.cs" />
-    <Compile Include="Nodes\TokenManager.cs" />
-    <Compile Include="EventArgs\NodeFoundEventArgs.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <BootstrapperPackage Include="Microsoft.Net.Framework.2.0">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 2.0 %28x86%29</ProductName>
-      <Install>true</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Net.Framework.3.0">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.0 %28x86%29</ProductName>
-      <Install>false</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5</ProductName>
-      <Install>false</Install>
-    </BootstrapperPackage>
-  </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
-  <ProjectExtensions>
-    <VisualStudio />
-  </ProjectExtensions>
-  <ItemGroup>
-    <ProjectReference Include="..\MonoTorrent\MonoTorrent.csproj">
-      <Project>{411A9E0E-FDC6-4E25-828A-0C2CD1CD96F8}</Project>
-      <Name>MonoTorrent</Name>
-    </ProjectReference>
+    <ProjectReference Include="..\MonoTorrent\MonoTorrent.csproj" />
   </ItemGroup>
 </Project>
